k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barfoo-deployment
spec:
  selector:
    matchLabels:
      app: barfoo
      tier: frontend
      product: training
  replicas: 1
  template:
    metadata:
      labels:
        app: barfoo
        tier: frontend
        product: training
    spec:
      containers:
      - name: docker-express
        image: noudadrichem/docker-express
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            memory: 250Mi
            cpu: 150m
        ports:
        - containerPort: 5000
      restartPolicy: Always
