k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: barfoo-svc
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 3600
  - port: 443
    name: https
    targetPort: 3600
  selector:
    app: barfoo
