k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:  barfoo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: testtesttesting.com
    http:
      paths:
      - path:
        backend:
          serviceName: barfoo-svc
          servicePort: 5000
